--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     </queries>
 
     <application>
-
+        <activity
+            android:name=".ui.activity.FragmentContainerActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
