--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -18,6 +18,6 @@
     <application>
         <activity
             android:name=".ui.activity.FragmentContainerActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="behind" />
     </application>
 </manifest>
